# event-recommendor

./: Dockerfile  README.md  app.py  config.py  eval.py  eval_results.txt  pyproject.toml
.github/workflows/: deploy.yml
.streamlit/: config.toml
agents/: events_agent.py  qa_agent.py  recommendation_agent.py  weather_agent.py
api/: main.py
api/routes/: qa.py  recommend.py
frontend/: app.js  index.html  style.css
models/: schemas.py
